# synstructure

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
example_traits/: Cargo.toml  lib.rs
src/: lib.rs  macros.rs
test_suite/: Cargo.toml  test.rs
test_suite/src/: lib.rs
test_suite/test_macros/: Cargo.toml  macros.rs
test_suite/test_macros/src/: lib.rs
test_traits/: Cargo.toml  lib.rs
tests/: alt_prefix.rs
