[package]
# A nice long awkward name so it doesn't conflict with things on crates.io.
name = "synstructure_test_traits"
version = "0.1.0"
description = "Helper test traits for synstructure doctests"
license = "MIT"
authors = ["Nika Layzell <nika@thelayzells.com>"]

[lib]
path = "lib.rs"

[dependencies]
# To trigger https://github.com/rust-lang/rust/issues/62132
syn = { version = "0.15", features = ["full"] }
