[package]
name = "test_macros"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]

[lib]
path = "macros.rs"
proc-macro = true

[dependencies]
synstructure = { path = "../../" }
syn-next = { version = "0.15.0-rc3" }
quote = "0.6"
proc-macro2 = "0.4"

synstructure_test_traits = { path = "../../test_traits" }
